--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,14 +1,30 @@
 .header-section{
-    padding: 30px;
+    padding: 39px;
 }
 .header-text{
-    color: #1D232F;	font-family: Lato;	font-size: 30px; margin-bottom: 0px; margin-top: 0px;
+    height: 42px;
+    width: 627px;
+    color: #1D232F;
+    font-size: 36px;
+    line-height: 43px;
+    font-family: Lato;	
+    margin-bottom: 0px; 
+    margin-top: 0px;
 }   
 .header-routing-panel p{
     margin-bottom: 0px;
+    height: 17px;	
+    width: 371px;	
+    color: #2B62CA;	
+    font-family: Lato;	
+    font-size: 14px;	
+    font-weight: bold;	
+    letter-spacing: 1.27px;	
+    line-height: 17px;
 } 
 .clr-blue{
-    color: blue;
+    color: #1873d4;
+    font-weight: 600;
 }
 .header-text-right .glyphicon.glyphicon-user{
     margin-left: 10px; 
@@ -19,6 +35,8 @@
 }
 .header-text-right span{
     margin-top: 7px; 
+    padding-left: 10px;
+    font-size: 16px;
 }
 .sub-header{
     background: #dee1e8;
