--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="col-md-12 header-section custom-header">
   <div class="col-md-12">
     <div class="col-md-12 header-routing-panel">
-      <p class="clr-blue">Speakers Program</p>
+      <p class="clr-blue">SPEAKER PROGRAMS</p>
     </div>
 
     <div class="col-md-6">
@@ -9,11 +9,11 @@
     </div>
 
     <div class="col-md-6 text-right clr-blue header-text-right">
-      <span>User Profile</span><span class="glyphicon glyphicon-user"></span>
+      <span>User Profile</span><span><img src="assets/icons/ico-view-profile.png"  /></span> 
     </div>
   </div>
 </div>
-<div class="col-md-12 sub-header header-section">
+<!-- <div class="col-md-12 sub-header header-section">
   <div class="col-md-12">
   <ul>
     <li>Subnav Option 1</li>
@@ -23,4 +23,4 @@
     <li>Subnav Option 5</li>
   </ul>
 </div>
-</div>
+</div> -->
