--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
   .logo-section{
      padding: 0px;
-     background: linear-gradient(to bottom right, #33ccff 0%, #006666 100%);
+     background: linear-gradient(to bottom right, #29bcec 0%, #053858 100%);
   }
   .glyphicon.glyphicon-plus{
+    font-size: 35px;
+  }
+  .glyphicon.glyphicon-map-marker{
+    font-size: 35px;
+  }
+  .glyphicon.glyphicon-stats{
+    font-size: 35px;
+  }
+  .glyphicon.glyphicon-list{
     font-size: 35px;
   }
   .nopadding.sticky-container{
@@ -59,10 +68,12 @@
     width: 90px;
   text-align: center;
   margin: auto;
-  padding: 10px 0px;
+  padding: 42px 0px;
   }
   .main-container{
-     background:#eff3f9; padding-left: 60px; padding-right: 60px;
+     background:#eff3f9;
+      padding-left: 60px;
+       padding-right: 60px;
   }
   .router-link-active { border-right: 4px solid skyblue;}
 
