--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="col-md-1 nopadding sticky-container">
   <div class="col-md-12 logo-section">
-    <img src="assets/icons/main-icon.svg" alt="company logo" class="img-responsive custom-logo" />
+    <img src="assets/img/logo-2.png" alt="company logo" class="img-responsive custom-logo" />
   </div><!-- col-md-12-->
   <div class="clearfix"></div>
   <div class="col-md-12 nopadding">
@@ -28,23 +28,32 @@
             </li>
 
             <li>
+                <a [routerLink]="['/create']" [routerLinkActive]="['router-link-active']">
+                  <span class="nav-pad">
+                    <span class="glyphicon glyphicon-plus"></span>
+                    <div class="clearfix"></div>
+                    CREATE EVENT
+                  </span>
+                </a>
+              </li>
+
+            <li>
               <a [routerLink]="['/calender']" [routerLinkActive]="['router-link-active']">
                 <span class="nav-pad">
                   <img src="assets/icons/calendar.svg" class="img-responsive" />
-                  CALENDER
+                  MY EVENTS
                 </span>
               </a>
             </li>
 
             <li>
-              <a [routerLink]="['/create']" [routerLinkActive]="['router-link-active']">
-                <span class="nav-pad">
-                  <span class="glyphicon glyphicon-plus"></span>
-                  <div class="clearfix"></div>
-                  CREATE EVENT
-                </span>
-              </a>
-            </li>
+                <a [routerLink]="['/mystory']" [routerLinkActive]="['router-link-active']">
+                  <span class="nav-pad">
+                    <img src="assets/icons/slides.svg" class="img-responsive" />
+                    MY STORY
+                  </span>
+                </a>
+              </li>
 
             <li>
               <a [routerLink]="['/training']" [routerLinkActive]="['router-link-active']">
@@ -56,13 +65,34 @@
             </li>
 
             <li>
-              <a [routerLink]="['/mystory']" [routerLinkActive]="['router-link-active']">
+              <a [routerLink]="['/venue']" [routerLinkActive]="['router-link-active']">
                 <span class="nav-pad">
-                  <img src="assets/icons/slides.svg" class="img-responsive" />
-                  MY STORY
+                    <span class="glyphicon glyphicon-map-marker"></span>
+                    <div class="clearfix"></div>
+                  VENUE
                 </span>
               </a>
             </li>
+
+            <li>
+                <a [routerLink]="['/attendee']" [routerLinkActive]="['router-link-active']">
+                  <span class="nav-pad">
+                      <span class="glyphicon glyphicon-list"></span>
+                      <div class="clearfix"></div>
+                    ATTENDEE LIST
+                  </span>
+                </a>
+              </li>
+
+              <li>
+                  <a [routerLink]="['/reports']" [routerLinkActive]="['router-link-active']">
+                    <span class="nav-pad">
+                        <span class="glyphicon glyphicon-stats"></span>
+                    <div class="clearfix"></div>
+                      REPORTS
+                    </span>
+                  </a>
+                </li>
 
             <li>
               <a [routerLink]="['/myprofile']" [routerLinkActive]="['router-link-active']">
