--- a/src/app/create-event/create-event.component.html
+++ b/src/app/create-event/create-event.component.html
@@ -2,7 +2,7 @@
     <ng-template matStepperIcon="edit">
         <mat-icon>done</mat-icon>
     </ng-template>
-  <mat-step [completed]="false">
+  <mat-step >
 
     <mat-card class="first-wrap line-height mat-card-sd">
       <ng-template matStepLabel>Program Logistics</ng-template>
@@ -190,7 +190,7 @@
   </mat-step>
 
   <!-- event-second-section Start-->
-  <mat-step class="event-second-section" [completed]="false">
+  <mat-step class="event-second-section" >
     <ng-template matStepLabel>Select Speaker</ng-template>
     <mat-card class="first-wrap line-height mat-card-sd">
       <div class="col-md-12"><span class="header-text-style">Event Information</span></div>
@@ -525,7 +525,7 @@
   </mat-step><!-- event-second-section End-->
 
 
-  <mat-step class="event-third-section" [completed]="false">
+  <mat-step class="event-third-section" >
    <ng-template matStepLabel>Select Venue</ng-template>
     <mat-card class="first-wrap line-height mat-card-sd">
       <div class="col-md-12">
@@ -684,7 +684,7 @@
     </mat-card>
   </mat-step>
 
-  <mat-step class="event-fourth-section" [completed]="false">
+  <mat-step class="event-fourth-section" >
     <ng-template matStepLabel>Review & Submit</ng-template>
     <mat-card class="first-wrap line-height mat-card-sd">
       <div class="col-md-12">
