--- a/src/app/create-event/create-event.component.html
+++ b/src/app/create-event/create-event.component.html
@@ -8,7 +8,9 @@
       <ng-template matStepLabel>Program Logistics</ng-template>
       <div class="col-md-12"><span class="header-text-style">Event Information</span></div>
       <div class="clearfix"></div>
+      <div class="col-md-12">
       <hr class="hr-color">
+    </div>
       <div class="col-md-4">
         <ul class="pad-lft-zero">
           <li><b>ID</b>: 2858</li>
@@ -35,7 +37,9 @@
       <div class="col-md-12"><span class="header-text-style">Patient Program Logistics</span> <span class="pull-right clr-blue fnt-weigth crsr-ptr" (click)="stepperNext(stepper)">Save
           & Next ></span></div>
       <div class="clearfix"></div>
-      <hr>
+      <div class="col-md-12">
+      <hr class="hr-color">
+      </div>
       <div class="col-md-6 p-r-25 p-l-0 border">
         <div class="form-group">
           <div class="col-md-12">
@@ -65,8 +69,7 @@
         </div>
         <div class="form-group radio-group">
           <div class="col-md-12">
-            <label>Program Type</label>
-            <div class="clearfix height5"></div>
+            <label>Program Type</label> 
             <div class="col-md-12 pl-0">
               <mat-radio-group>
                 <mat-radio-button value="1" [checked]="true">Live </mat-radio-button>
@@ -97,7 +100,7 @@
           </div>
         </div>
         <div class="form-group">
-          <div class="col-md-12">
+          <div class="col-md-12 speaker-inputs">
             <label>Speaker Program Start Time</label>
             <div class="clearfix"></div>
             <div class="col-md-3 pl-0"><input class="form-control"></div>
@@ -106,7 +109,7 @@
           </div>
         </div>
         <div class="form-group">
-          <div class="col-md-12">
+          <div class="col-md-12 speaker-inputs">
             <label>Speaker Program End Time</label>
             <div class="clearfix"></div>
             <div class="col-md-3 pl-0"><input class="form-control"></div>
@@ -164,13 +167,13 @@
             </mat-radio-group>
           </div>
         </div>
-        <div class="form-group">
+        <div class="form-group form-group-custom">
           <div class="col-md-12">
             <label class="clr-grey">Optional Meeting Services</label>
             <div class="clearfix"></div>
             <mat-checkbox>Px onsite coordinator at your Meeting <b>(ADMIN ONLY)</b></mat-checkbox>
             <mat-checkbox>Print Invitations generated and mailed to you for distribution </mat-checkbox>  
-            <mat-checkbox>Email Invitations sent to you for distribution</mat-checkbox>
+            <mat-checkbox class="mrb-0">Email Invitations sent to you for distribution</mat-checkbox>
           </div>
         </div>
         <div class="col-md-12">
@@ -180,7 +183,7 @@
         </div>
         <div class="form-group">
           <div class="col-md-12 text-right">
-            <button mat-button class="fnt-weigth">Reset</button>
+            <!-- <button mat-button class="fnt-weigth">Reset</button> -->
             <button mat-button class="primary-custom" (click)="stepperNext(stepper)" >Save & Next</button>
           </div>
         </div>
