--- a/src/styles.css
+++ b/src/styles.css
@@ -39,10 +39,15 @@ hr {
 .mat-horizontal-stepper-header-container {
    background: white;
 } 
+.mat-stepper-horizontal-line {
+  border-top-width: 3px !important; 
+  border-color: #757575 !important;
+} 
 .mat-horizontal-stepper-header { 
   width: 125px;
   text-align: center; 
-  height: 90px !important;
+  height: 125px !important; 
+  padding: 0 49px !important;
 }
 .mat-horizontal-content-container{
   padding: 0px !important; 
@@ -51,6 +56,9 @@ hr {
   width: 100% !important; 
   border-top: 0px; 
 } 
+.mat-horizontal-stepper-header-container{
+  border-radius: 8px !important; 
+}
 
 .dailog-wrapper .fc-toolbar .fc-right,
 .dailog-wrapper .btn.btn-default,
@@ -160,15 +168,15 @@ color: white;
 .mat-step-icon-state-number.mat-step-icon.mat-step-icon-selected{
   background-color: white;
   color: #1873d4;
-  border: 1px solid #1873d4; 
+  border: 2px solid #1873d4; 
 }
 .mat-step-header .mat-step-icon {
   background-color: #fff;
   color: rgba(0,0,0,.54);
-  border: 1px solid rgba(0,0,0,.54);
+  border: 2px solid rgba(0,0,0,.54);
   margin-right: auto !important;
   margin: auto;
-  margin-top: 20px;
+  margin-top: 29px;
 }
 .mat-form-field{
   width: 100%;
@@ -231,7 +239,7 @@ color: white;
 }
 .mat-step-label{
   position: absolute;
-  bottom: 15px;
+  bottom: 25px;
   margin: auto;
   left: 0px;
   right: 0px;
@@ -258,12 +266,12 @@ color: white;
   border-color: green;
 }
 .mat-step-icon{
-  height: 30px !important;
-  width:30px !important;
+  height: 43px !important;
+  width:43px !important;
 }
 .mat-stepper-horizontal-line{
-  height: 20px !important;
-margin: 0 -70px !important;
+  height: 30px !important;
+  margin: 0 -90px !important;
 }
 .mat-step-label-selected{
   color: #1873d4 !important;
@@ -337,6 +345,14 @@ transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 tr.mat-header-row {
   height: 47px !important;
 }
+.mat-checkbox-layout{
+  margin-bottom: 20px;
+  font-size: 16px;
+}
+
+/* .mat-step-icon .mat-icon, .mat-step-icon-content{
+  font-size: 23px !important;
+} */
 @media only screen and (max-width: 800px) {
   .mat-horizontal-stepper-header-container{
       white-space: nowrap; 
