--- a/src/app/create-event/create-event.component.css
+++ b/src/app/create-event/create-event.component.css
@@ -323,6 +323,9 @@ td.mat-cell:first-of-type, td.mat-footer-cell:first-of-type, th.mat-header-cell:
     padding-right: 5px;
     padding-left: 5px;
 }
+.second-wrap span.fnt-weigth{
+    padding-top: 40px;
+}
 @media only screen and (max-width: 600px) {
     .vanue-delete-btn{
         float: left;
